--- a/03_project/main.scss
+++ b/03_project/main.scss
@@ -2,6 +2,57 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-10rem);
+    }
+
+    80% {
+        opacity: 1;
+        transform: translateX(1rem);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(10rem);
+    }
+
+    80% {
+        opacity: 1;
+        transform: translateX(-1rem);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes moveInBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(10rem);
+    }
+
+    80% {
+        opacity: 1;
+        transform: translateY(-1rem);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -34,68 +85,37 @@ body {
     position: relative;
 }
 
-.logo-box {
+.logo {
     position: absolute;
     top: 4rem;
     left: 4rem;
-}
-
-.logo {
-    height: 3.5rem;
-}
-
-@keyframes moveInLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(20rem);
-    }
-
-    80% {
-        opacity: 1;
-        transform: translateX(-2rem);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-@keyframes moveInRight {
-    0% {
-        opacity: 0;
-        transform: translateX(-20rem);
-    }
-
-    80% {
-        opacity: 1;
-        transform: translateX(2rem);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateX(0);
+    
+    &__img {
+        height: 3.5rem;
     }
 }
 
 .heading-primary {
     color: white;
     text-transform: uppercase;
+    margin-bottom: 6rem;
+
+    // backface-visibility: hidden;
     
-    &-main {
+    &__main {
         display: block;
         font-size: 6rem;
         font-weight: 400;
         letter-spacing: 3.5rem;
-        animation: moveInLeft .6s;
+        animation: moveInLeft 1s;
     }
 
-    &-sub {
+    &__sub {
         display: block;
         font-size: 2rem;
         font-weight: 700;
         letter-spacing: 1.75rem;
-        animation: moveInRight .6s;
+        animation: moveInRight 1s;
     }
 }
 
@@ -105,4 +125,58 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     // background-color: red;
+    text-align: center;
+}
+
+.btn {
+    &:link,
+    &:visited {
+        font-size: 1.8rem;
+        text-decoration: none;
+        padding: 1rem 4.5rem;
+        display: inline-block;
+        border-radius: 10rem;
+        transition: all .2s;
+        outline: none;
+        position: relative;
+        text-transform: uppercase;
+    }
+
+    &:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
+    }
+
+    &:active {
+        transform: translateY(-1px);
+        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .3);
+    }
+
+    &--white {
+        color: #777;
+        background-color: #fff;
+    }
+
+    &--animated {
+        &::after {
+            content: "";
+            display: inline-block;
+            background-color: white;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            border-radius: 10rem;
+            z-index: -1;
+            transition: all .4s;
+        }
+
+        &:hover {
+            &::after {
+                transform: scaleX(1.3) scaleY(1.7);
+                opacity: 0;
+            }
+        }
+    }
 }
