--- a/03_project/style.css
+++ b/03_project/style.css
@@ -1,3 +1,36 @@
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); }
+  80% {
+    opacity: 1;
+    transform: translateX(1rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem); }
+  80% {
+    opacity: 1;
+    transform: translateX(-1rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(10rem); }
+  80% {
+    opacity: 1;
+    transform: translateY(-1rem); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
+
 * {
   margin: 0;
   padding: 0;
@@ -22,54 +55,73 @@ body {
   height: 95vh;
   position: relative; }
 
-.logo-box {
+.logo {
   position: absolute;
   top: 4rem;
   left: 4rem; }
-
-.logo {
-  height: 3.5rem; }
-
-@keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(20rem); }
-  80% {
-    opacity: 1;
-    transform: translateX(-2rem); }
-  100% {
-    opacity: 1;
-    transform: translateX(0); } }
-
-@keyframes moveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(-20rem); }
-  80% {
-    opacity: 1;
-    transform: translateX(2rem); }
-  100% {
-    opacity: 1;
-    transform: translateX(0); } }
+  .logo__img {
+    height: 3.5rem; }
 
 .heading-primary {
   color: white;
-  text-transform: uppercase; }
-  .heading-primary-main {
+  text-transform: uppercase;
+  margin-bottom: 6rem; }
+  .heading-primary__main {
     display: block;
     font-size: 6rem;
     font-weight: 400;
     letter-spacing: 3.5rem;
-    animation: moveInLeft .6s; }
-  .heading-primary-sub {
+    animation: moveInLeft 1s; }
+  .heading-primary__sub {
     display: block;
     font-size: 2rem;
     font-weight: 700;
     letter-spacing: 1.75rem;
-    animation: moveInRight .6s; }
+    animation: moveInRight 1s; }
 
 .text-box {
   position: absolute;
   top: 40%;
   left: 50%;
-  transform: translate(-50%, -50%); }
+  transform: translate(-50%, -50%);
+  text-align: center; }
+
+.btn:link, .btn:visited {
+  font-size: 1.8rem;
+  text-decoration: none;
+  padding: 1rem 4.5rem;
+  display: inline-block;
+  border-radius: 10rem;
+  transition: all .2s;
+  outline: none;
+  position: relative;
+  text-transform: uppercase; }
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3); }
+
+.btn--white {
+  color: #777;
+  background-color: #fff; }
+
+.btn--animated::after {
+  content: "";
+  display: inline-block;
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 10rem;
+  z-index: -1;
+  transition: all .4s; }
+
+.btn--animated:hover::after {
+  transform: scaleX(1.3) scaleY(1.7);
+  opacity: 0; }
