--- a/11_libri/views/autori.ejs
+++ b/11_libri/views/autori.ejs
@@ -9,6 +9,8 @@
     <body>
         <h1>Autori</h1>
 
+        <p><a href="/">Home</a></p>
+
         <form action="/nuovo-autore" method="POST">
             <input type="text" name="nome" placeholder="Nome">
             <input type="text" name="cognome" placeholder="Cognome">
