--- a/12_libri2/views/libri.ejs
+++ b/12_libri2/views/libri.ejs
@@ -13,31 +13,25 @@
 
         <form action="/nuovo-libro" method="POST">
             <input type="text" name="titolo" placeholder="Titolo">
-            <select name="autore">
-                <option value="0">---</option>
-                <% autori.forEach(function (autore) { %>
-                    <option value="<%= autore.id %>"><%= autore.cognome %> <%= autore.nome %></option>
-                <% }); %>
-            </select>
             <input type="submit" value="Inserisci Nuovo Libro">
         </form>
 
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Titolo</th>
-                <th>Autore</th>
-                <th></th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            <% libri.forEach(function (libro) { %>
+        <table>
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Titolo</th>
+                    <th>Autori</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <% libri.forEach(function (libro) { %>
                 <tr>
                     <td><%= libro.id %></td>
                     <td><%= libro.titolo %></td>
-                    <td><%= libro.cognome %></td>
+                    <td><%= libro.autori %></td>
                     <td><a href="/libro/<%= libro.id %>/edit">Edit</a></td>
                     <td><form action="/delete-libro" method="POST"><input type="hidden" name="id" value="<%= libro.id %>"><input type="submit" value="&times;"></form></td>
                 </tr>
