--- a/09_todo/app/views/index.ejs
+++ b/09_todo/app/views/index.ejs
@@ -14,15 +14,15 @@
             <input type="submit" value="Crea Nuovo ToDo">
         </form>
 
-        <form action="/clear" method="post">
-            <input type="submit" value="&times;">
+        <form action="/todos/delete" method="post">
+            <input type="submit" value="Delete">
         </form>
 
         <ul>
             <% todos.forEach( function (todo) { %>
                 <li>
                     <%= todo.text %> - <%= todo.done %>
-                    <form action="/toggle" method="post">
+                    <form action="/todos/toggle" method="post">
                         <input type="hidden" name="id" value="<%= todo.id %>">
                         <input type="submit" value="Toggle">
                     </form>
